[gd_scene load_steps=12 format=3 uid="uid://cvj3haa5fhbus"]

[ext_resource type="Script" path="res://Node2D2.gd" id="1_3rfqu"]
[ext_resource type="Texture2D" uid="uid://bkcxjmgf8nfxy" path="res://Art/Escenarios_objetos/libro_Kant.png" id="2_v8mpj"]
[ext_resource type="FontFile" uid="uid://s2r3p8xeadxl" path="res://Art/PixelAE-Regular.ttf" id="3_npm8x"]
[ext_resource type="Texture2D" uid="uid://bpr02i5skrrko" path="res://Art/flecha.png" id="4_0mxvu"]

[sub_resource type="Animation" id="Animation_eeh8k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("panel/RichTextLabel:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_xybnl"]
resource_name = "Textoanimado"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("panel/RichTextLabel:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"finish_showtext"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_covvf"]
_data = {
"RESET": SubResource("Animation_eeh8k"),
"Textoanimado": SubResource("Animation_xybnl")
}

[sub_resource type="Animation" id="Animation_aa0ul"]
resource_name = "Mastext"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/TextureRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1127, 124), Vector2(1127, 129), Vector2(1127, 124)]
}

[sub_resource type="Animation" id="Animation_0ugvs"]
resource_name = "Mastexto"

[sub_resource type="Animation" id="Animation_c4vpe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/TextureRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1127, 124)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mfr5q"]
_data = {
"Mastext": SubResource("Animation_aa0ul"),
"Mastexto": SubResource("Animation_0ugvs"),
"RESET": SubResource("Animation_c4vpe")
}

[node name="Node2D2" type="Node2D"]
script = ExtResource("1_3rfqu")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(482, 384)
rotation = 3.14159
scale = Vector2(2.13844, -1.96178)
texture = ExtResource("2_v8mpj")

[node name="panel" type="PanelContainer" parent="."]
clip_contents = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 141.0
offset_top = 121.0
offset_right = 463.0
offset_bottom = 535.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="panel"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("3_npm8x")
theme_override_font_sizes/normal_font_size = 20
theme_override_font_sizes/bold_font_size = 32
bbcode_enabled = true
text = "[center] dgd"
scroll_active = false
visible_characters = 0
visible_ratio = 0.0

[node name="Control" type="Control" parent="panel"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="panel/Control"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1127.0
offset_top = 124.0
offset_right = 1197.0
offset_bottom = 201.0
grow_horizontal = 0
grow_vertical = 0
rotation = 1.5708
texture = ExtResource("4_0mxvu")

[node name="AnimationPlayer2" type="AnimationPlayer" parent="panel"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_covvf")
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="panel"]
libraries = {
"": SubResource("AnimationLibrary_mfr5q")
}

[node name="btA" type="Button" parent="."]
visible = false
offset_left = 638.0
offset_top = 161.0
offset_right = 702.0
offset_bottom = 259.0
theme_override_font_sizes/font_size = 65
text = "A"
flat = true

[node name="btB" type="Button" parent="."]
visible = false
offset_left = 791.0
offset_top = 159.0
offset_right = 855.0
offset_bottom = 257.0
theme_override_font_sizes/font_size = 65
text = "B"
flat = true

[node name="btC" type="Button" parent="."]
visible = false
offset_left = 645.0
offset_top = 350.0
offset_right = 709.0
offset_bottom = 448.0
theme_override_font_sizes/font_size = 65
text = "C"
flat = true

[node name="btD" type="Button" parent="."]
visible = false
offset_left = 789.0
offset_top = 353.0
offset_right = 853.0
offset_bottom = 451.0
theme_override_font_sizes/font_size = 65
text = "D"
flat = true

[connection signal="pressed" from="btA" to="." method="_on_bt_a_pressed"]
[connection signal="pressed" from="btB" to="." method="_on_bt_b_pressed"]
[connection signal="pressed" from="btC" to="." method="_on_bt_c_pressed"]
[connection signal="pressed" from="btD" to="." method="_on_bt_d_pressed"]
